🖊️ Düzenleme: Kod blokları düzenlendi

--- a/content/1.belgeler/0.index.md
+++ b/content/1.belgeler/0.index.md
@@ -14,13 +14,23 @@ Modülü kullanmadan önce indirmeye bakalım. Öncelikle modülü indirmek içi
 - Ve kod kalitenizi arttırmak için sevgi 💖 sürüm 1.0 ve sonrası (içine sevginizi katmalısınız).
 
 Eğer şartları karşılıyorsanız modülü kurmak için terminalinize aşağıdaki komutu yazıp çalıştırmalısınız:
-```bash
+::code-group
+```bash [NPM]
 npm i falsisdb@latest
 ```
+```bash [YARN]
+yarn add falsisdb
+```
+::
 ::alert{type="info"}
 Bu komut [:icon{name="file-icons:npm"} Npmjs](https://www.npmjs.com/package/falsisdb) üzerine yüklü en son sürümü kurar. Eğer henüz stabil olarak yayınlanmamış olan GitHub sürümünü indirmek istersemiz aşağıdaki komutu terminalinize yazıp çalıştırmalısınız.
 ::
-```bash
+::code-group
+```bash [NPM]
 npm i "https://github.com/falsisdev/falsisdb.git#master"
 ```
+```bash [YARN]
+yarn add https://github.com/falsisdev/falsisdb.git#master
+```
+::
 Komut çalıştırıldıktan sonra paket bir süre indirilecektir. İndirilmesi tamamlandığında ise paket tamamen kullanıma hazır olur!
