--- a/content/1.belgeler/1.tanimlamalar.md
+++ b/content/1.belgeler/1.tanimlamalar.md
@@ -8,7 +8,8 @@ FalsisDB modülünü başarıyla indirdik. Şimdi ise modülü kullanıma uygun 
 ## En Basit Tanımalama
 
 Modülde epey bir yapılandırma ayarı bulunuyor. Bu yüzden modülün tanımlama kodu fazla uzun oluyor. Ancak hiçbir yapılandırma ayarına dokunmadan, en sade haliyle de tanımlama yapabilirsiniz. Lakin en basit tanımlamada bile bir ayar mevcuttur. Veritabanının tipini seçmelisiniz. Fakat illaha ki tek bir tip ile kullanmak zorunda değilsiniz. İsterseniz 2 farklı tipte 2 farklı veritabanı, isterseniz 50 aynı tipte veritabanı oluşturabilirsiniz. Tamamen sizin özgürlüğünüz. Aşağıdaki kodda, 1 adet YAML ve 1 adet de JSON veritabanı oluştuduk. Bunu en sade şekilde ayarladık:
-```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase,
     YAMLDatabase
@@ -16,6 +17,12 @@ const {
 const jsondb = new JSONDatabase()
 const yamldb = new YAMLDatabase()
 ```
+```ts [TypeScript]
+import { JSONDatabase, YAMLDatabase } = from 'falsisdb';
+const jsondb = new JSONDatabase()
+const yamldb = new YAMLDatabase()
+```
+::
 Yukarıda `jsondb` ve `yamldb` sabitlerine 2 adet veritabanı tanımladık. Peki, bu veritabanı nereye kaydolacak? Nasıl kaydedilecek?
 
 Eğer yapılandırmalardan hiçbirini ayarlamazsanız, modül otomatik olarak yapılandırmaları şu şekilde ayarlayacaktır:
@@ -25,8 +32,8 @@ Eğer yapılandırmalardan hiçbirini ayarlamazsanız, modül otomatik olarak ya
 
 Bu terimlerden bazılarına ilerleyen kısımlarda bahsedeceğiz. Bu kısımda veritabanı dosya konumunun ne anlama geldiğinden bahsedelim.
 Falsisdb, JSON ve YAML şeklinde yerel dosyalar oluşturarak veritabanı kaydeden basit bir modüldür. Bunun anlamı, bu sistem uzak bir veritabanı değildir ve tüm veriler tamamen projenizde depolanır. Projenizde verilerin nereye depolanacağını aslında ayarlayabilirsiniz. Ancak eğer bunu ayarlamazsanız Falsisdb, otomatik olarak dosyayı `./falsisdb/database.json` veya `./falsisdb/database.yaml` olarak ayarlar. Yani ana proje dosyanızda `falsisdb` isimli bir klasör oluşturulur ve bu klasörün altına `database` isimli bir veritabanı dosyası eklenir. Bu dosyanın içeriği ise seçtiğiniz veritabanı şeklinde göre değişiklik gösterir.
-Örneğin aşağıda bir JSON veritabanı örneği yer alıyor:
-```json
+::code-group
+```json [JSON]
 {
     "merhaba": "dünya",
     "falsisdb": {
@@ -35,9 +42,7 @@ Falsisdb, JSON ve YAML şeklinde yerel dosyalar oluşturarak veritabanı kaydede
     }
 }
 ```
-Aynı şekilde bunu YAML şeklinde de kaydedebilirsiniz. Bu ise şu örnekteki gibi olur:
-```yaml
----
+```yaml [YAML]
 merhaba: dünya
 falsisdb:
   json: ve
@@ -45,8 +50,11 @@ falsisdb:
   - veritabanı
   - modülü
 ```
+::
+
 Peki, şimdi de biraz bu veritabanı dosyasını nasıl değiştirebileceğimizden bahsedelim. Bunun için `constructor` kısmına `filePath` isimli bir alt değişken ve buna değer girmelisiniz. Yani örneğin eğer dosyanızı `./databases/default.json` veya `./databases/default.yaml` şeklinde ayarlamak istiyorsanız. Bunu şu şekilde kodlamalısınız:
-```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase,
     YAMLDatabase
@@ -58,6 +66,16 @@ const yamldb = new YAMLDatabase({
     filePath: './databases/default.yaml'
 })
 ```
+```ts [TypeScript]
+import { JSONDatabase, YAMLDatabase } = from 'falsisdb';
+const jsondb = new JSONDatabase({
+    filePath: './databases/default.json'
+})
+const yamldb = new YAMLDatabase({
+    filePath: './databases/default.yaml'
+})
+```
+::
 ::alert{type="warning"}
 Eğer ayarlamak istediğiniz dosya konumunun başına `./` eklemezseniz sistem çalışmayacaktır. Ayrıca her ne kadar sorun olmaması gerekse de yine de sistemde hiçbir sorun oluşmaması için bu konumun sonuna uzantıyı ekleyin (`.json` veya `.yaml`)
 ::
