--- a/content/1.belgeler/2.kullanim.md
+++ b/content/1.belgeler/2.kullanim.md
@@ -6,10 +6,17 @@ toc: false
 Falsisdb'yi içeri aktarma tanımlamasını yaptıktan sonra modülü kullanmamız gerekiyor. Modülün kullanımı aslında çok basit. atadığınız değişken ile fonksiyonları kullanıyorsunuz. Yani `<değişken>.<fonksiyon>` şeklinde kullanılıyor.
 
 Haydi bir örnek yapalım. Örneğin `get()` fonksiyonunu kullanarak bir örnek yapalım. Bu fonksiyonu sadece örnek için kullanıyoruz, fonksiyonun ayrıntılı bilgisine [buradan](/belgeler/fonksiyonlar/get) ulaşabilirsiniz.
-```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase
 } = require('falsisdb');
+const db = new JSONDatabase()
+
+let result = db.get('merhaba')
+```
+```ts [TypeScript]
+import { JSONDatabase, YAMLDatabase } = from 'falsisdb';
 const db = new JSONDatabase()
 
 let result = db.get('merhaba')
