--- a/content/1.belgeler/3.olaylar.md
+++ b/content/1.belgeler/3.olaylar.md
@@ -10,27 +10,47 @@ Bu olayları `on()` isimli olay okuma fonksiyonu kullanılarak kullanabilirsiniz
 ### dataSet
 `dataSet` olayı veritabanına herhangi bir veri eklendiğinde tetiklenir. Bu ise örneğin `set()` fonksiyonu kullanıldığında tetikleneceği anlamına gelir.
 
-```js
+::code-group
+```js [CommonJS]
 db.on("dataSet", (data) => {
-    if(data.changed == true){
+    if(data.changed){
         console.log(`📝 Veri Tabanında Bir Veri Değiştirildi\n- Veri Adı: ${data.key}\n- Eski Değeri: ${data.oldValue}\n- Yeni Değeri: ${data.value}`) 
     }
-    if(data.newAdded == true){
+    if(data.newAdded){
         console.log(`📝 Veri Tabanına Bir Veri Eklendi\n- Veri Adı: ${data.key}\n- Veri Değeri: ${data.value}`) 
     }
     console.log(data) 
 })
 ```
+```ts [TypeScript]
+db.on("dataSet", (data: any) => {
+    if(data.changed){
+        console.log(`📝 Veri Tabanında Bir Veri Değiştirildi\n- Veri Adı: ${data.key}\n- Eski Değeri: ${data.oldValue}\n- Yeni Değeri: ${data.value}`) 
+    }
+    if(data.newAdded){
+        console.log(`📝 Veri Tabanına Bir Veri Eklendi\n- Veri Adı: ${data.key}\n- Veri Değeri: ${data.value}`) 
+    }
+    console.log(data) 
+})
+```
+::
 `data` nesnesi içindeki `changed` değeri `boolean` türündedir ve verinin değiştirilip değiştirilmediğini gösterir. Bunu değişiklik yapılan verinin yeni mi eklendiğini yoksa sadece değerinin mi değiştirildiğini anlamak için kullanabilirsiniz. Aynı yukarıdaki örnekte olduğu gibi. `key` değeri verinin adını, `oldValue` eski değerini ve `value` de yeni değerini gösterir. Eğer `changed` değeri `false` ise `oldValue` size `null` olarak döndürülür. `newAdded` değeri ise direkt olarak verinin yeni eklenip eklenmediğini yine `boolean` türünde döndürür. Bunu `changed` değeri ile zaten yapabildiğiniz için, ikisinden birini kullanmanız yeterli olur.
 
 ### dataDelete
 `dataDelete` olayı veritabanından herhangi bir veri silindiğinde tetiklenir. Bu ise örneğin `delete()` fonksiyonu kullanıldığında tetikleneceği anlamına gelir.
 
-```js
+::code-group
+```js [CommonJS]
 db.on("dataDelete", (data) => {
     console.log(`📝 Veri Tabanında Bir Veri Silindi\n- Veri Adı: ${data.key}\n- Eski Değeri: ${data.value}`)
 })
 ```
+```ts [TypeScript]
+db.on("dataDelete", (data: any) => {
+    console.log(`📝 Veri Tabanında Bir Veri Silindi\n- Veri Adı: ${data.key}\n- Eski Değeri: ${data.value}`)
+})
+```
+::
 
 Bu olayın `data` nesnesinde `dataSet`den farklı olarak çok fazla değer bulunmaz. Burada yalnızca silinen verinin adını döndüren `key` ve silinmeden önceki değerini döndüren `value` değerleri yer alır.
 
