--- a/content/1.belgeler/4.yedekleme.md
+++ b/content/1.belgeler/4.yedekleme.md
@@ -20,7 +20,8 @@ Yedekleme sistemi yapılandırması, `constructor` içinde bulunan `backup` nesn
 Yukarıda verdiğimiz `path`, `time` ve `logging` değerlerinin tümü **isteğe bağlıdır**.
 Şimdi ise en basitinden bir yedekleme sistemi kuracağımız için, bunların hiçbirini atamayacağız. Ancak `backup` bir nesne olduğundan içi boş olacak da olsa buraya bir nesne eklemeliyiz.
 
-```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase,
     YAMLDatabase
@@ -32,6 +33,16 @@ const yamldb = new YAMLDatabase({
     backup: {} //nesne oluşturuldu.
 })
 ```
+```ts [TypeScript]
+import { JSONDatabase, YAMLDatabase } = from 'falsisdb';
+const jsondb = new JSONDatabase({
+    backup: {} //nesne oluşturuldu.
+})
+const yamldb = new YAMLDatabase({
+    backup: {} //nesne oluşturuldu.
+})
+```
+::
 İşte bu kullanım, yedekleme sisteminin en sade kullanımıdır. Hiçbir değer atanmadığından değerlerin hepsi varsayılandadır. Peki nedir bu varsayılan değerler?
 
 - Yedekleme Dosyası Konumu: `./falsisdb/backup.json` veya `./falsisdb/backup.yaml`.
@@ -40,7 +51,8 @@ const yamldb = new YAMLDatabase({
 
  Bunu bir nesne olarak atarsak, varsayılan değerler şu şekildedir:
 
- ```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase,
     YAMLDatabase
@@ -60,13 +72,32 @@ const yamldb = new YAMLDatabase({
     }
 })
 ```
+```ts [TypeScript]
+import { JSONDatabase, YAMLDatabase } = from 'falsisdb';
+const jsondb = new JSONDatabase({
+    backup: {
+        path: './falsisdb/backup.json',
+        time: 5,
+        logging: false   
+    }
+})
+const yamldb = new YAMLDatabase({
+    backup: {
+        path: './falsisdb/backup.json',
+        time: 5,
+        logging: false   
+    }
+})
+```
+::
 
 ### Yedekleme Sistemini Kişiselleştirme
 
 Yedekleme sistemini kişiselleştirme hemen üstte bulunan kod bloğundaki değerleri düzenleyerek gerçekleştirilir.
 Örneğin '`./backups/default.json`' isimli klasöre `10` veride bir loglama ayarını açarak yedek tutmak istiyorsanız bunu aşağıdaki şekilde yapmalısınız:
 
- ```js
+::code-group
+```js [CommonJS]
 const { 
     JSONDatabase
 } = require('falsisdb');
@@ -78,6 +109,17 @@ const db = new JSONDatabase({
     }
 })
 ```
+```js [TypeScript]
+import { JSONDatabase } = from 'falsisdb';
+const db = new JSONDatabase({
+    backup: {
+        path: './backups/default.json',
+        time: 10,
+        logging: true  
+    }
+})
+```
+::
 
 Yukarıdaki ayarlara göre sistem, `./backups/default.json` isimli klasöre her 10 veride bir yedek kaydedecek ve her yedek kaydedildikten sonra konsolunuza kaydedildiğine dair bir uyarı gönderilecek.
 
@@ -87,10 +129,17 @@ Yedekleme olayı ya da `backup event`, olaylar kısmında varlığından zaten b
 
 Yedekleme olayı diğer olaylarda da olduğu gibi `on()` olay tetikleyici fonksiyonunu kullanır. Olayın ismi `backup`'tır ve diğer olaylardan farklı olarak içerisinde `data` nesnesi bulunmaz. Bu nesne direkt olarak `lastData` şeklinde atanmıştır.
 
-```js
+::code-group
+```js [CommonJS]
 db.on("backup", ({lastData}) => {
     console.log(`Yedekleme alındı:\n${lastData}`)
 })
 ```
+```ts [TypeScript]
+db.on("backup", ({lastData}: any) => {
+    console.log(`Yedekleme alındı:\n${lastData}`)
+})
+```
+::
 
 Yukarıdaki olayda kod herhangi bir yedek alındığı anda tetiklenir.
